# opencv-learn

./: .gitignore  CMakeLists.txt  CV_8U.md  README.md  Vec3b.md
cpp/: 00_test.cpp  00test.cpp  01.cpp  01_basic_mask.cpp  02_mat.cpp  02mat.cpp  03_image_operate_at.cpp  03image_operate.cpp  03image_operate_at.cpp  03image_operate_at_convertTo.cpp  04_blend_hsv.cpp  04_hsv.cpp  04blend_hsv.cpp  04hsv.cpp  05_shape_text.cpp  05shape_text.cpp  06_smooth_blur.cpp  06smooth_blur.cpp  07_dilate_erode.cpp  07dilate_erode.cpp  08_morphology.cpp  08morphology.cpp  09_horizon_vertical_line.cpp  09horizon_vertical_line.cpp  10_up_dowm_resize.cpp  10up_dowm_sample.cpp  10up_dowm_sample_resize.cpp  10up_dowm_sample_resize_INTER_LINEAR.cpp  11_threshold_normalize_convertTo.cpp  11threshold.cpp  11threshold_normalize.cpp  11threshold_normalize_convertTo.cpp  12_conv_border.cpp  12line_threshold_conv.cpp  12line_threshold_conv_border.cpp  13_sobel_scharr.cpp  13sobel_scharr.cpp  14_laplance.cpp  14laplance.cpp  15_canny_edge_detect.cpp  (+49 more)
python/: 01_basic_mask.ipynb  02_rotate_wrapAffine_getRotationMatrix2D_getAffineTransform.ipynb  03_rotate_wrapAffine.ipynb  03_warpPerspective.ipynb  04_blend_addWeighted.ipynb  05_line_rectangle_ellipse_circle_text.ipynb  05_line_rectangle_ellipse_circle_text_boundingRect_minAreaRect.ipynb  06_smooth_blur.ipynb  08_morphology.ipynb  08_morphology.py  09_horizon_vertical_line.ipynb  10_up_dowm_resize.ipynb  11_threshold_normalize.ipynb  11_threshold_normalize.py  11_threshold_normalize_convertTo.ipynb  12_filter2D_copyMakeBorder.ipynb  13_Sobel_Scharr_Laplacian.ipynb  13_laplacian_implement.ipynb  13_prewitt_implement.ipynb  13_scharr_implement.ipynb  13_sober_implement.ipynb  15_Canny.ipynb  15_Canny_find_boundaries.ipynb  16_hough.ipynb  17_remap.ipynb  18_histogram_calcHist_calcBackProject.ipynb  19_matchTemplate.ipynb  20_findContours.ipynb  20_findContours_drawContours_contourArea.ipynb  21_convexHull.ipynb  22_outline_rectangle_approxPolyDP.ipynb  23_moments.ipynb  24_point_polygon_test.ipynb  25_split_merge_mixChannels.ipynb  26_fourier_dft.ipynb  33_corner_harris.ipynb  40-1meanshift.py  40-2Camshift.py  40_video.ipynb  41_bitwise.ipynb  (+7 more)
python/old/: imshow,subplot和subplots.md  imutils 封装的OpenCV.md
python/old/code/03图像处理/: 3.1-5透射变换warpPerspective.py  3.4-1.2直方图的计算和绘制calcHist.py  3.4-1.3掩膜的应用mask.py  3.4-2.1直方图均衡化equalizeHist.py  3.4-2.1自适应的直方图均衡化createCLAHE.py
python/old/code/04图像特征提取与描述/: 4.2-1Shi_Tomasi角点检测.py  4.2-1harris检测.py  4.3-1SIFT算法和SURF算法.py  4.4-1Fast算法.py  4.4-2ORB算法.py
python/old/code/05视频操作/: 5.1-1视频读取VideoCapture_read_get_set.py  5.1-2视频文件保存VideoWriter.py  5.2-1meanshift.py  5.2-2Camshift.py
shapely_test/: basic.ipynb  contains&covers.ipynb
