cmake_minimum_required(VERSION 3.19)
project(opencv_learn_cpp)

set(CMAKE_CXX_STANDARD 14)

# opencv
set(OpenCV_DIR D:/ai/opencv/build/x64/vc15/lib)
find_package(OpenCV REQUIRED)
if(OpenCV_FOUND)
    message("OpenCV_INCLUDE_DIRS: " ${OpenCV_INCLUDE_DIRS})
    message("OpenCV_LIBRARIES: " ${OpenCV_LIBRARIES})
endif()
include_directories(${OpenCV_INCLUDE_DIRS})
# 链接所有库，不指定cpp文件
link_libraries(${OpenCV_LIBRARIES})

add_executable(xxmmdeploy_func cpp/xxmmdeploy_func.cpp)
add_executable(00test cpp/00test.cpp)
add_executable(01basic_mask cpp/01basic_mask.cpp)
add_executable(02mat cpp/02mat.cpp)
add_executable(03image_operate cpp/03image_operate_convertTo.cpp)
add_executable(04blend_hsv cpp/04blend_hsv.cpp)
add_executable(04hsv cpp/04hsv.cpp)
add_executable(05shape_text cpp/05shape_text.cpp)
add_executable(06smooth_blur cpp/06smooth_blur.cpp)
add_executable(07dilate_erode cpp/07dilate_erode.cpp)
add_executable(08morphology cpp/08morphology.cpp)
add_executable(09horizon_vertical_line cpp/09horizon_vertical_line.cpp)
add_executable(10up_dowm_sample_resize cpp/10up_dowm_sample_resize_INTER_LINEAR.cpp)
add_executable(11threshold_normalize cpp/11threshold_normalize.cpp)
add_executable(12line_threshold_conv_border cpp/12line_threshold_conv_border.cpp)
add_executable(13sobel_scharr cpp/13sobel_scharr.cpp)
add_executable(14laplance cpp/14laplance.cpp)
add_executable(15canny_edge_detect cpp/15canny_edge_detect.cpp)
add_executable(16hough cpp/16hough.cpp)
add_executable(17remap cpp/17remap.cpp)
add_executable(18histogram cpp/18histogram_calcHist_calcBackProject.cpp)
add_executable(19matchTemplate cpp/19matchTemplate.cpp)
add_executable(20find_contour cpp/20find_contour.cpp)
add_executable(21convex_hull cpp/21convex_hull.cpp)
add_executable(22outline_rectangle cpp/22outline_rectangle_approxPolyDP.cpp)
add_executable(23moments cpp/23moments.cpp)
add_executable(24point_polygon_test cpp/24point_polygon_test.cpp)
add_executable(25split_merge cpp/25split_merge_mixChannels.cpp)
add_executable(26fourier_dft cpp/26fourier_dft.cpp)
add_executable(27wiener cpp/27wiener.cpp)
add_executable(28translate_move cpp/28translate_move.cpp)
add_executable(29image_concat_surf cpp/29image_concat_surf.cpp)
add_executable(30image_concat_orb cpp/30image_concat_orb.cpp)
add_executable(31rotate cpp/31rotate.cpp)
add_executable(32wrapAffine cpp/32wrapAffine.cpp)
add_executable(33corner_harris cpp/33corner_harris.cpp)
add_executable(34CV_8U cpp/34CV_8U_convertTo_convertScaleAbs.cpp)
add_executable(35createTrackbar cpp/35createTrackbar.cpp)