cmake_minimum_required(VERSION 3.19)
project(opencv_learn_cpp)

set(CMAKE_CXX_STANDARD 14)

# opencv
set(OpenCV_DIR D:/ml/opencv/build/x64/vc16/lib)
find_package(OpenCV REQUIRED)
if(OpenCV_FOUND)
    message("OpenCV_INCLUDE_DIRS: " ${OpenCV_INCLUDE_DIRS})
    message("OpenCV_LIBRARIES: " ${OpenCV_LIBRARIES})
endif()
include_directories(${OpenCV_INCLUDE_DIRS})
# 链接所有库，不指定cpp文件
link_libraries(${OpenCV_LIBRARIES})

add_executable(00_test cpp/00_test.cpp)
add_executable(01_basic_mask cpp/01_basic_mask.cpp)
add_executable(02_mat cpp/02_mat.cpp)
add_executable(03_image_operate_at cpp/03_image_operate_at.cpp)
add_executable(04_blend_hsv cpp/04_blend_hsv.cpp)
add_executable(04_hsv cpp/04_hsv.cpp)
add_executable(05_shape_text cpp/05_shape_text.cpp)
add_executable(06_smooth_blur cpp/06_smooth_blur.cpp)
add_executable(07_dilate_erode cpp/07_dilate_erode.cpp)
add_executable(08_morphology cpp/08_morphology.cpp)
add_executable(09_horizon_vertical_line cpp/09_horizon_vertical_line.cpp)
add_executable(10_up_dowm_sample_resize cpp/10_up_dowm_resize.cpp)
add_executable(11_threshold_normalize cpp/11_threshold_normalize_convertTo.cpp)
add_executable(12_conv_border cpp/12_conv_border.cpp)
add_executable(13_sobel_scharr cpp/13_sobel_scharr.cpp)
add_executable(14_laplance cpp/14_laplance.cpp)
add_executable(15_canny_edge_detect cpp/15_canny_edge_detect.cpp)
add_executable(16_hough cpp/16_hough.cpp)
add_executable(17_remap cpp/17_remap.cpp)
add_executable(18_histogram cpp/18_histogram_calcHist_calcBackProject.cpp)
add_executable(19_matchTemplate cpp/19_matchTemplate.cpp)
add_executable(20_findContours cpp/20_findContours.cpp)
add_executable(21_convexHull cpp/21_convexHull.cpp)
add_executable(22_outline_rectangle cpp/22_outline_rectangle_approxPolyDP.cpp)
add_executable(23_moments cpp/23_moments.cpp)
add_executable(24_point_polygon_test cpp/24_point_polygon_test.cpp)
add_executable(25_split_merge cpp/25_split_merge_mixChannels.cpp)
add_executable(26_fourier_dft cpp/26_fourier_dft.cpp)
add_executable(27_wiener cpp/27_wiener.cpp)
add_executable(28_translate_move cpp/28_translate_move.cpp)
add_executable(29_image_concat_surf cpp/29_image_concat_surf.cpp)
add_executable(30_image_concat_orb cpp/30_image_concat_orb.cpp)
add_executable(31_rotate cpp/31_rotate.cpp)
add_executable(32_wrapAffine cpp/32_wrapAffine.cpp)
add_executable(33_corner_harris cpp/33_corner_harris.cpp)
add_executable(34_CV_8U cpp/34_CV_8U_convertTo_convertScaleAbs.cpp)
add_executable(35_createTrackbar cpp/35_createTrackbar.cpp)
